# AndroidStudy

./: build.gradle  settings.gradle
GradleStudy/src/main/: AndroidManifest.xml
GradleStudy/src/main/java/com/android/gradle/activity/: GradleActivity.kt
GradleStudy/src/test/java/com/android/gradle/: ExampleUnitTest.kt
JavaBase/: build.gradle
JavaBase/src/androidTest/java/com/android/java_base/: ExampleInstrumentedTest.java
JavaBase/src/androidTest/java/com/android/javabase/: ExampleInstrumentedTest.java
JavaBase/src/main/: AndroidManifest.xml
JavaBase/src/main/java/com/android/java_base/: JavaBaseActivity.kt
JavaBase/src/main/java/com/android/javabase/activity/: JavaBaseActivity.kt  JavaCollectionActivity.kt  JavaGenericActivity.kt
JavaBase/src/main/res/layout/: activity_java_base.xml
JavaBase/src/test/java/com/android/java_base/: ExampleUnitTest.java
JavaBase/src/test/java/com/android/javabase/: ExampleUnitTest.java
NDK/: build.gradle
NDK/src/main/: AndroidManifest.xml  CMakeLists.txt
NDK/src/main/cpp/: CMakeLists.txt  nativelib.cpp
NDK/src/main/cpp/c_language/: chapter_one.c  chapter_one.h
NDK/src/main/java/com/android/ndk/activity/: NDKActivity.kt
NDK/src/main/java/com/android/ndk/c_language/: CLActivity.kt  C语言基础知识
NDK/src/main/java/com/android/ndk/c_language/chapter_1/: Chapter1Activity.kt  NativeChapterOne.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_1/data/: Chapter1DataProvider.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_2/: Chapter2Activity.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_3/: Chapter3Activity.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_4/: Chapter4Activity.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_5/: Chapter5Activity.kt
NDK/src/main/java/com/android/ndk/c_language/chapter_6/: Chapter6Activity.kt
NDK/src/main/java/com/android/ndk/cpp_language/: C++基础知识
NDK/src/main/java/com/android/ndk/main/: CMakeActivity.kt  CPlusLActivity.kt  FFmpegActivity.kt  JNIActivity.kt  LinuxActivity.kt  NDKActivity.kt  NativeLib.kt  ShellActivity.kt
NDK/src/main/java/com/android/ndk/main/ffmpeg/: FFmpegMediaActivity.kt
NDK/src/test/java/com/android/ndk/: ExampleUnitTest.kt
OpenSource/src/main/: AndroidManifest.xml
OpenSource/src/main/java/com/android/open/activity/: OpenSourceActivity.kt
OpenSource/src/test/java/com/android/open/: ExampleUnitTest.kt
algorithms/src/main/: AndroidManifest.xml
algorithms/src/main/java/com/android/algorithms/activity/: AlgorithmsAndStructActivity.kt
algorithms/src/test/java/com/android/algorithms/: ExampleUnitTest.kt
annotation/src/main/java/com/hulk/lib/: Hulk.java  MyClass.java
app/: build.gradle
app/src/androidTest/java/com/hulk/androidstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hulk/androidstudy/: MainActivity.kt  MyApplication.kt
app/src/main/res/layout/: activity_activities_home.xml  activity_custom_layout.xml  activity_example_fragment.xml  activity_flow_layout.xml  activity_get_result.xml  activity_give_like_view.xml  activity_life_cycle_case.xml  activity_main.xml  activity_my_layout_manager.xml  activity_my_text_view.xml  activity_news.xml  activity_open.xml  activity_pictures_graphics.xml  activity_proxy.xml  activity_reflect.xml  activity_retrofit.xml  activity_rx_java.xml  activity_seek_bar.xml  activity_thread.xml  activity_widget.xml  activity_window.xml  adapter_layout_manager.xml  adapter_main.xml  dialog_window.xml  fragment_example.xml  fragment_example_b.xml  fragment_grid.xml  fragment_news.xml  image_card.xml
app/src/main/res/transition/: grid_exit_transition.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  themes.xml
app/src/test/java/com/hulk/androidstudy/: A.java  ExampleUnitTest.kt
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/res/drawable/: bg_withe_bottom_line.xml
common/src/main/res/layout/: common_layout_recycle_view.xml  item_provider_desc.xml  item_provider_meun.xml  item_provider_run.xml  item_provider_tab.xml  item_provider_title.xml
common/src/main/res/values/: colors.xml  strings.xml  style.xml
compiler/src/main/java/com/hulk/compiler/: MyClass.java  MyProcessor.java
concurrent/src/main/: AndroidManifest.xml
concurrent/src/test/java/com/android/concurrent/: ExampleUnitTest.kt
framework/src/main/: AndroidManifest.xml
framework/src/main/res/layout/: activity_app_message_lopper.xml  activity_binder.xml
framework/src/main/res/values/: strings.xml
framework/src/test/java/com/android/framework/: ExampleUnitTest.kt
jetpack/src/main/: AndroidManifest.xml
jvm/src/main/: AndroidManifest.xml
jvm/src/test/java/com/android/jvm/: ExampleUnitTest.kt
kotlin/src/main/: AndroidManifest.xml
ndk/: build.gradle
ndk/src/androidTest/java/com/android/ndk/: ExampleInstrumentedTest.kt
ndk/src/main/: AndroidManifest.xml
ndk/src/main/cpp/: CMakeLists.txt  ndk.cpp
ndk/src/main/java/com/android/ndk/: NativeLib.kt
network/src/main/: AndroidManifest.xml
performance/: build.gradle
performance/src/main/: AndroidManifest.xml
performance/src/test/java/com/android/performance/: ExampleUnitTest.kt
view/src/main/: AndroidManifest.xml
view/src/test/java/com/android/view/: ExampleUnitTest.kt
webview/: build.gradle
webview/src/main/: AndroidManifest.xml
webview/src/main/aidl/com/hulk/webview/: ICallbackFromMainprocessToWebViewProcessInterface.aidl  IWebviewProcessToMainProcessInterface.aidl
webview/src/main/assets/: demo.html
webview/src/main/assets/js/: xiangxuejs.js
webview/src/main/java/com/hulk/webview/: MainProcessTestActivityA.kt  MainProcessTestActivityB.kt  WebViewActivity.kt  WebViewCallBack.kt  WebViewFragment.kt
webview/src/main/res/layout/: activity_main_process_test_activitya.xml  activity_main_process_test_activityb.xml  activity_webview.xml  fragment_webview.xml
(+218 files in other folders)
